@@ -1,3 +1,9 @@
+2005-08-30  Richard Henderson  <rth@redhat.com>
+
+	PR target/23630
+	* expr.c (expand_expr_real_1) <VIEW_CONVERT_EXPR>: Use gen_lowpart
+	whenever the mode sizes match.
+
 2005-08-29  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR rtl-optimization/15248
